src/test/ui/rfc-2632-const-trait-impl/std-impl-gate.stock.stderr
error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/std-impl-gate.rs:13:5
   |
LL |     Default::default()
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
